Fix mobile wrapping bug

--- a/css/main.css
+++ b/css/main.css
@@ -1951,8 +1951,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .header-top {
     background: #04091e;
-    font-size: 22px;
-    padding: 8px
+    font-size: 20px;
+    padding: 4px
 }
 
 .header-top a {
@@ -1965,7 +1965,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header-top .header-top-left {
-    text-align: left
+    text-align: left;
+    flex: 0 0 80%;
+    max-width: 80%;
 }
 
 .header-top .header-top-left i {
@@ -1991,7 +1993,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header-top .header-top-right {
-    text-align: right
+    text-align: right;
+    flex: 0 0 20%;
+    max-width: 20%;
 }
 
 .header-top .header-top-right a {
